# draw

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/drawbot/: __init__.py  cli.py  config.py  gui.py  models.py  mouse.py  planner.py  svg.py
tests/: test_config.py  test_models.py  test_mouse.py  test_planner.py  test_svg.py
